force-app/main/default/objects/Lead_Read_Snapshot__c/Lead_Read_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Lead Read Snapshot</label>
    <nameField>
        <displayFormat>LRS-{00000000}</displayFormat>
        <label>Lead Read Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Read Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>