force-app/main/default/objects/Lead_Read_Snapshot__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <description>SHA-256 hash of the payload, for integrity verification.</description>
    <label>Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>