force-app/main/default/objects/Lead_Read_Snapshot__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead this Read Snapshot was captured for.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead</relationshipLabel>
    <relationshipName>ReadSnap_Lead_Records</relationshipName>
    <type>Lookup</type>
</CustomField>