force-app/main/default/objects/Lead_Read_Snapshot__c/fields/Payload_Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Payload_Size_Bytes__c</fullName>
    <description>Size of the payload in bytes.</description>
    <label>Payload Size (Bytes)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>