force-app/main/default/objects/Lead_Read_Snapshot__c/fields/Prior_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Prior_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup to the prior Read Snapshot in this lead&apos;s chain (re-read pattern).</description>
    <label>Prior Snapshot</label>
    <referenceTo>Lead_Read_Snapshot__c</referenceTo>
    <relationshipLabel>Subsequent Read Snapshots</relationshipLabel>
    <relationshipName>Subsequent_Read_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>