force-app/main/default/objects/Lead_Read_Snapshot__c/fields/Reasoning_Agent_Version__c.field-meta.xml
<CustomField>
    <fullName>Reasoning_Agent_Version__c</fullName>
    <description>If Reasoning Agent parsing was used during Read, the agent version.</description>
    <label>Reasoning Agent Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>