force-app/main/default/objects/Lead_Read_Snapshot__c/fields/Reevaluation_Source__c.field-meta.xml
<CustomField>
    <fullName>Reevaluation_Source__c</fullName>
    <description>Free-text describing triggering event</description>
    <label>Re-evaluation Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>