force-app/main/default/objects/Lead_Read_Snapshot__c/fields/Reevaluation_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Reevaluation_Trigger__c</fullName>
    <description>Initial = first snapshot in chain; others = re-evaluation triggers</description>
    <label>Re-evaluation Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Rule_Update</fullName>
                <label>Rule Update</label>
            </value>
            <value>
                <fullName>Suppression_Refresh</fullName>
                <label>Suppression Refresh</label>
            </value>
            <value>
                <fullName>Enrichment_Refresh</fullName>
                <label>Enrichment Refresh</label>
            </value>
            <value>
                <fullName>Capacity_Change</fullName>
                <label>Capacity Change</label>
            </value>
            <value>
                <fullName>Human_Request</fullName>
                <label>Human Request</label>
            </value>
            <value>
                <fullName>Engagement_Event</fullName>
                <label>Engagement Event</label>
            </value>
            <value>
                <fullName>Carrier_State_Change</fullName>
                <label>Carrier State Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>