force-app/main/default/objects/Lead_Read_Snapshot__c/fields/Sequence_In_Chain__c.field-meta.xml
<CustomField>
    <fullName>Sequence_In_Chain__c</fullName>
    <description>Order within Lead&apos;s Read Snapshot chain</description>
    <label>Sequence in Chain</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>