force-app/main/default/objects/Lead_Read_Snapshot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of this snapshot.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>created</fullName>
                <label>Created</label>
            </value>
            <value>
                <fullName>superseded</fullName>
                <label>Superseded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>